kubernetes/apps/mealie/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  name: http
      host: recept.${domain}
  tls:
    - hosts:
        - recept.${domain}
      secretName: recept.${domain}-cert
